Reference gif from .jars
Converted gif references to use gradle's resource
import system. Also changed the way the gif is referenced
so it isn't dependent on the user directory.